--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.14.1",
     "axios": "^1.7.2",
+    "framer-motion": "^12.23.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
